# qonto-interview

transaction-classifier/: .gitignore  Makefile  README.md  main.py  pyproject.toml
transaction-classifier/notebooks/: 1_EDA.ipynb  1_exploratory_analysis.ipynb  2_model_exploration.ipynb  3_build_embeddings.ipynb
transaction-classifier/notebooks/.ipynb_checkpoints/: 1_EDA-checkpoint.ipynb
transaction-classifier/src/: config.py  evaluate.py  features.py  train.py
