[project]
name = "transaction-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.27.2",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers==2.6.1",
    "transformers==4.38.2",
    "torch==2.2.2",
    "tqdm>=4.67.3",
]
[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
